FIX: Row gap plans (goals and plans)

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2484,6 +2484,7 @@ gap: 50px;
 
         .theplan {
             max-width: 850px;
+            gap: 50px;
             margin-right: auto;
             margin-left: auto;
 
